// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BentoTile renders in bento theme 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "#f4f4f5",
      "flex": 1,
      "opacity": 0,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      accessibilityLabel="Milk, Expires Fri"
      accessibilityRole="summary"
      accessible={true}
      style={
        [
          {
            "aspectRatio": 1,
            "flex": 1,
          },
          {
            "backgroundColor": "#ffffff",
            "borderColor": "#e4e4e7",
            "borderRadius": 14,
            "borderWidth": 1,
            "minHeight": 88,
            "padding": 16,
          },
        ]
      }
    >
      <Text
        style={
          {
            "color": "#0a0a0a",
            "fontSize": 16,
            "fontWeight": "600",
            "lineHeight": 24,
          }
        }
      >
        Milk
      </Text>
      <Text
        style={
          {
            "color": "#71717a",
            "fontSize": 12,
            "lineHeight": 16,
            "marginTop": 4,
          }
        }
      >
        Expires Fri
      </Text>
    </View>
  </View>
</View>
`;

exports[`BentoTile renders in clay theme 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "#fff7f0",
      "flex": 1,
      "opacity": 0,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      accessibilityLabel="Milk, Expires Fri"
      accessibilityRole="summary"
      accessible={true}
      style={
        [
          {
            "aspectRatio": 1,
            "flex": 1,
          },
          {
            "backgroundColor": "#ffffff",
            "borderColor": "#fde0c2",
            "borderRadius": 16,
            "borderWidth": 1,
            "minHeight": 88,
            "padding": 18,
          },
        ]
      }
    >
      <Text
        style={
          {
            "color": "#5b3a1f",
            "fontSize": 16,
            "fontWeight": "700",
            "lineHeight": 24,
          }
        }
      >
        Milk
      </Text>
      <Text
        style={
          {
            "color": "#a47148",
            "fontSize": 13,
            "lineHeight": 18,
            "marginTop": 4,
          }
        }
      >
        Expires Fri
      </Text>
    </View>
  </View>
</View>
`;

exports[`BentoTile renders in expyrico theme 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "#0b0a17",
      "flex": 1,
      "opacity": 1,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      accessibilityLabel="Milk, Expires Fri"
      accessibilityRole="summary"
      accessible={true}
      style={
        [
          {
            "aspectRatio": 1,
            "flex": 1,
          },
          {
            "backgroundColor": "rgba(255,255,255,0.06)",
            "borderColor": "rgba(255,255,255,0.12)",
            "borderRadius": 14,
            "borderWidth": 1,
            "minHeight": 88,
            "padding": 18,
          },
        ]
      }
    >
      <Text
        style={
          {
            "color": "#fafafa",
            "fontSize": 16,
            "fontWeight": "500",
            "lineHeight": 24,
          }
        }
      >
        Milk
      </Text>
      <Text
        style={
          {
            "color": "rgba(250,250,250,0.7)",
            "fontSize": 12,
            "lineHeight": 16,
            "marginTop": 4,
          }
        }
      >
        Expires Fri
      </Text>
    </View>
  </View>
</View>
`;

exports[`BentoTile renders in material theme 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "#f0e8ff",
      "flex": 1,
      "opacity": 0,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      accessibilityLabel="Milk, Expires Fri"
      accessibilityRole="summary"
      accessible={true}
      style={
        [
          {
            "aspectRatio": 1,
            "flex": 1,
          },
          {
            "backgroundColor": "#ffffff",
            "borderColor": "#e0e0e0",
            "borderRadius": 16,
            "borderWidth": 1,
            "minHeight": 88,
            "padding": 16,
          },
        ]
      }
    >
      <Text
        style={
          {
            "color": "#1d1b20",
            "fontSize": 16,
            "fontWeight": "500",
            "lineHeight": 24,
          }
        }
      >
        Milk
      </Text>
      <Text
        style={
          {
            "color": "#65558f",
            "fontSize": 12,
            "lineHeight": 16,
            "marginTop": 4,
          }
        }
      >
        Expires Fri
      </Text>
    </View>
  </View>
</View>
`;
